--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<li><a href="https://k.lapy.link/@Ink_Slime/">@Ink_Slime@k.lapy.link</a></li>
 					<li><a href="https://planet.moe/@Ink_Slime/">@Ink_Slime@planet.moe</a></li>
 					<li><a href="https://www.tumblr.com/blog/ink-slime/">Tumblr</a></li>
-					<li><a href="https://gamejolt.com/@Ink_Slime/">GameJolt</a></li>
+					<!--<li><a href="https://gamejolt.com/@Ink_Slime/">GameJolt</a></li>-->
 				</ul>
 			</div>
 
