--- a/index.html
+++ b/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE HTML>
 <html lang="ko-KR">
 
-	<head>
-		<meta charset="utf-8" />
-		<title>Ink Slime's Github Main Page</title>
-		<link rel="stylesheet" href="styles.css" />
-	</head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Ink Slime's Github Page</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-	<body>
+  <body>
+    <div class="main">
+      <header>
+	<div class="profile">
+	  <img src="./profile.png">
+	</div>
 
-		<div class="main">
-			<div class="profile">
-				<img src="./profile.png">
-			</div>
+	<h1>Ink Slime's Github Page</h1>
 
-			<h1>Ink Slime's Github Page</h1>
+	<nav>
+	  <div>
+	    <ul>
+	      <li><a href="https://k.lapy.link/@Ink_Slime/">@Ink_Slime@k.lapy.link</a></li>
+	      <li><a href="https://planet.moe/@Ink_Slime/">@Ink_Slime@planet.moe</a></li>
+	      <li><a href="https://www.tumblr.com/blog/ink-slime/">Tumblr</a></li>
+	      <!--<li><a href="https://gamejolt.com/@Ink_Slime/">GameJolt</a></li>-->
+	    </ul>
+	  </div>
+	</nav>
+      </header>
 
-			<div>
-				<ul>
-					<li><a href="https://k.lapy.link/@Ink_Slime/">@Ink_Slime@k.lapy.link</a></li>
-					<li><a href="https://planet.moe/@Ink_Slime/">@Ink_Slime@planet.moe</a></li>
-					<li><a href="https://www.tumblr.com/blog/ink-slime/">Tumblr</a></li>
-					<!--<li><a href="https://gamejolt.com/@Ink_Slime/">GameJolt</a></li>-->
-				</ul>
-			</div>
+      <section>
+      </section>
 
-		</div>
+      <footer>
+      </footer>
 
-	</body>
+    </div>
+  </body>
 </html>
