--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
   </head>
 
   <body>
-    <div class="main">
-      <header>
-	<div class="profile">
-	  <img src="./profile.png">
-	</div>
-
-	<h1>Ink Slime's Github Page</h1>
-
-	<nav>
-	  <div>
-	    <ul>
-	      <li><a href="https://k.lapy.link/@Ink_Slime/">@Ink_Slime@k.lapy.link</a></li>
-	      <li><a href="https://planet.moe/@Ink_Slime/">@Ink_Slime@planet.moe</a></li>
-	      <li><a href="https://www.tumblr.com/blog/ink-slime/">Tumblr</a></li>
-	      <!--<li><a href="https://gamejolt.com/@Ink_Slime/">GameJolt</a></li>-->
-	    </ul>
-	  </div>
-	</nav>
-      </header>
-
-      <section>
-      </section>
-
-      <footer>
-      </footer>
-
-    </div>
+    <div class="container">
+      <div class="main">
+	<div class="main_flex">
+	  <header>
+	    <div class="shadow">
+	    <div class="profile">
+	      <img src="./profile.png">
+	    </div>
+	    </div>
+	  </header>
+	  <h1>Ink Slime's Github Page</h1>
+	  <nav>
+	    <div>
+	      <ul>
+		<li><a href="https://k.lapy.link/@Ink_Slime/">@Ink_Slime@k.lapy.link</a></li>
+		<li><a href="https://planet.moe/@Ink_Slime/">@Ink_Slime@planet.moe</a></li>
+		<li><a href="https://www.tumblr.com/blog/ink-slime/">Tumblr</a></li>
+		<!--<li><a href="https://gamejolt.com/@Ink_Slime/">GameJolt</a></li>-->
+	      </ul>
+	    </div>
+	  </nav>
+	</div><!--main flex-->
+	<section>
+	</section>
+	<footer>
+	</footer>
+      </div><!--main-->
+    </div><!--container-->
   </body>
 </html>
